--- a/.github/workflows/schedule.yaml
+++ b/.github/workflows/schedule.yaml
@@ -2,7 +2,7 @@ name: Scheduled Workflow
 
 on:
   schedule:
-    - cron: "* * * * 1-5" # Runs at midnight every day
+    - cron: "* * * * *" # Runs at midnight every day
 
 jobs:
   build:
