--- a/.github/workflows/schedule.yaml
+++ b/.github/workflows/schedule.yaml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run a Script
-        run: echo "Performing $environment task at $(date)."
+        run: echo "Performing ${{environment}}."
